@@ -40,6 +40,7 @@
 +	- Primitive categories are now sorted alphabetically.
 +	- Added hi-res counterparts for various primitive categories.
 +	- Added support for direct colors.
++	- Added an action for splitting lines into equal-sized segments.
 
 -	- The camera is now changed to the top one if switching to draw mode while using the free camera instead of disabling the draw mode.
 -	- The color selector now uses the color's edge color for the borders instead of black.
